<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
**
**
** halbae87: modified Soft Keyboard Sample to create this project.
**
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">한글 기본 입력기</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="pref_title_general">일반</string>
    <string name="pref_title_sw_keyboard">한글키보드 종류</string>
    <string name="pref_title_hw_keyboard">외장 한글키보드 종류</string>

    <string name="pref_danmoum">단모음 키보드</string>
    <string name="pref_dubul">두벌식 키보드</string>
    <string name="pref_sebul">세벌식 키보드</string>
    <string name="pref_titile_etc">기타</string>
    <string name="pref_titile_license">라이센스</string>
    <string name="pref_license_1">참고소스와 라이센스 안내</string>
    <string name="pref_license_2">오픈소스</string>
    <string name="dialog_btn_yes">확인</string>
    <string name="dialog_btn_no">취소</string>
    <string name="key_sw_keyboard">key_sw_key</string>
    <string name="key_hw_keyboard">key_hw_key</string>
    <string name="key_license_refsrc">key_license_refsrc</string>
    <string name="key_license_opensrc">key_license_opensrc</string>    
    
    
</resources>
