<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="korean_keyboard_setting_title"
    android:title="@string/ime_name">
    
    <PreferenceCategory
        android:key="setting_general" 
        android:title="@string/pref_title_general">
        <Preference
            android:key="@string/key_sw_keyboard" 
            android:title="@string/pref_title_sw_keyboard"/>
        <Preference 
            android:key="@string/key_hw_keyboard"
            android:title="@string/pref_title_hw_keyboard"/>
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="setting_etc" 
        android:title="@string/pref_titile_etc"
        >
        <Preference android:title="test" android:key="test" android:summary="나중에 추가할꺼야"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_titile_license" android:key="setting_license">
        <Preference android:key="@string/key_license_refsrc" android:title="@string/pref_license_1"/>
        <Preference android:key="@string/key_license_opensrc" android:title="@string/pref_license_2"/>
    </PreferenceCategory>
    

</PreferenceScreen>
